style: исправить ошибки в оформлении и правки в скрипте js

--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,5 +1,8 @@
 .element {
   min-height: 361px;
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
+  overflow: hidden;
+  background-color: #fff;
+  border-radius: 10px;
 }
