--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,7 +2,8 @@
   max-width: 880px;
   height: auto;
   color: #545454;
-  margin: 0 auto;
-  padding: 48px 15px 36px 15px;
+  margin: 0;
+  padding: 67px 15px 60px 15px;
   display: flex;
+  flex-shrink: 0;
 }
