--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,5 +3,6 @@
   min-height: 74px;
   margin: 45px auto 0;
   padding: 0 15px;
-  border-bottom: 1px solid #545454;
+  box-sizing: border-box;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
