--- a/blocks/element/__base/element__base.css
+++ b/blocks/element/__base/element__base.css
@@ -1,10 +1,5 @@
 .element__base {
-  /* height: minmax(45px, 100%); */
-  height: 100%;
-  background-color: #fff;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  margin: 25px 15px 31px 21px;
 }
