--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,11 +1,11 @@
 .element__title {
-  font-family: "Inter";
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-
-  /* padding-left: 21px; */
-  padding: 15px 0 15px 21px;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: no-wrap;
+  overflow: hidden;
 }
