--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -2,9 +2,10 @@
   margin: 0;
   /* padding-top: 67px; */
 
-  font-family: "Inter";
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  justify-self: flex-start;
 }
