--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -1,17 +1,15 @@
 .popup__content {
-  min-width: 430px;
-  min-height: 330px;
+  /* min-width: 430px;
+  min-height: 330px; */
+  padding: 34px 36px;
   background-color: #fff;
   color: #000;
   box-sizing: border-box;
   border-radius: 10px;
   position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
 }
 
-@media screen and (max-width: 550px) {
+/* @media screen and (max-width: 550px) {
   .popup__content {
     min-width: 350px;
   }
@@ -21,4 +19,4 @@
   .popup__content {
     min-width: 250px;
   }
-}
+} */
