--- a/blocks/popup/__input/_type_name/popup__inputs_type_name.css
+++ b/blocks/popup/__input/_type_name/popup__inputs_type_name.css
@@ -1,10 +1,9 @@
-.popup__input {
+.popup__input_type_name {
   max-width: 358px;
-  margin: 0 36px;
   border: none;
-  border-bottom: solid 1px #000000;
+  border-bottom: solid 1px rgba(0, 0, 0, 0.2);
 
-  font-family: "Inter";
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
