--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,14 +1,14 @@
 .popup__title {
-  font-family: "Inter";
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
   margin: 0;
-  padding: 34px 0 0 36px;
+  margin-bottom: 54px;
 }
 
-@media screen and (max-width: 550px) {
+/* @media screen and (max-width: 550px) {
   .popup__title {
     font-size: 18px;
   }
@@ -18,4 +18,4 @@
   .popup__title {
     font-size: 14px;
   }
-}
+} */
