--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,12 +1,12 @@
 .profile__info {
   min-width: 336px;
-  max-height: 90px;
+  min-height: 90px;
   color: #fff;
   display: grid;
   grid-template: repeat(2, max-content) / repeat(2, max-content);
   grid-template-areas:
-    "name edit"
-    "profession .";
+    'name edit'
+    'profession .';
   row-gap: 16px;
   column-gap: 18px;
 }
@@ -14,5 +14,6 @@
 @media screen and (max-width: 375px) {
   .profile__info {
     min-width: 250px;
+    row-gap: 14px;
   }
 }
