--- a/blocks/popup/__inputs/_type_name/popup__inputs_type_name.css
+++ b/blocks/popup/__inputs/_type_name/popup__inputs_type_name.css
@@ -1,4 +1,4 @@
-.popup__input_type_profession {
+.popup__inputs_type_name {
   max-width: 358px;
   border: none;
   border-bottom: solid 1px rgba(0, 0, 0, 0.2);
