--- a/blocks/popup/__input/_type_profession/popup__input_type_profession.css
+++ b/blocks/popup/__input/_type_profession/popup__input_type_profession.css
@@ -1,4 +1,4 @@
-.popup__inputs_type_name {
+.popup__input_type_profession {
   max-width: 358px;
   border: none;
   border-bottom: solid 1px rgba(0, 0, 0, 0.2);
