--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -6,3 +6,9 @@
   background-color: #fff;
   border-radius: 10px;
 }
+
+@media screen and (max-width: 320px) {
+  .element {
+    max-width: 282px;
+  }
+}
