--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -9,3 +9,10 @@
   line-height: 22px;
   justify-self: flex-start;
 }
+
+@media screen and (max-width: 440px) {
+  .footer__text {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
