--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,19 @@
   max-width: 880px;
   min-height: 74px;
   margin: 45px auto 0;
-  padding: 0 15px;
+  /* padding: 0 15px; */
   box-sizing: border-box;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    min-height: 56px;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .header {
+    margin: 28px auto 0;
+  }
 }
