--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,19 +1,20 @@
 .profile__info {
   min-width: 336px;
-  min-height: 90px;
+  /* min-height: 90px; */
   color: #fff;
   display: grid;
-  grid-template: repeat(2, max-content) / repeat(2, max-content);
+  grid-template-rows: repeat(2, max-content);
   grid-template-areas:
-    'name edit'
-    'profession .';
+    'name'
+    'profession';
   row-gap: 16px;
   column-gap: 18px;
+  position: relative;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 440px) {
   .profile__info {
     min-width: 250px;
-    row-gap: 14px;
+    row-gap: 0;
   }
 }
