--- a/blocks/element/__base/element__base.css
+++ b/blocks/element/__base/element__base.css
@@ -1,5 +1,8 @@
 .element__base {
   display: flex;
   justify-content: space-between;
-  margin: 25px 15px 31px 25px;
+  /* margin: 25px 15px 31px 25px; */
+  margin-bottom: 26px; /* высота 362px получается с отступом 26px */
+  margin-left: 21px;
+  margin-right: 15px;
 }
