--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -6,6 +6,6 @@
   line-height: 29px;
   margin: 0;
   text-overflow: ellipsis;
-  white-space: no-wrap;
+  white-space: nowrap;
   overflow: hidden;
 }
