--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,5 +1,6 @@
 .popup__input {
-  max-width: 358px;
+  /* max-width: 358px; */
+  width: 100%;
   border: none;
   border-bottom: solid 1px rgba(0, 0, 0, 0.2);
 
