--- a/blocks/popup/__save-btn/popup__save-btn.css
+++ b/blocks/popup/__save-btn/popup__save-btn.css
@@ -3,13 +3,14 @@
   min-height: 50px;
   background-color: #000;
   color: #fff;
+  border: 0;
   border-radius: 2px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  margin-top: 42px;
+  margin-top: 18px;
   align-self: center;
   cursor: pointer;
 }
@@ -29,3 +30,10 @@
     min-width: 250px;
   }
 } */
+
+@media screen and (max-width: 440px) {
+  .popup__save-btn {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
