--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -5,17 +5,19 @@
   font-size: 24px;
   line-height: 29px;
   margin: 0;
-  margin-bottom: 35px;
+  margin-bottom: 54px;
 }
 
 /* @media screen and (max-width: 550px) {
   .popup__title {
     font-size: 18px;
   }
-}
-
-@media screen and (max-width: 470px) {
-  .popup__title {
-    font-size: 14px;
-  }
 } */
+
+@media screen and (max-width: 440px) {
+  .popup__title {
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 75px;
+  }
+}
