--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -7,7 +7,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 400px;
+  max-width: 380px;
 
   grid-area: name;
   /* justify-self: center; */
@@ -24,7 +24,7 @@
 @media screen and (max-width: 440px) {
   .profile__name {
     font-size: 27px;
-    font-weight: 33px;
+    line-height: 33px;
     max-width: 250px;
   }
 }
