--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -2,6 +2,7 @@
   /* max-width: 358px; */
   width: 100%;
   border: none;
+  padding-bottom: 10px;
   border-bottom: solid 1px rgba(0, 0, 0, 0.2);
 
   font-family: 'Inter', 'Arial', sans-serif;
