--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,7 +1,8 @@
 .element__image {
-  min-height: 282px;
-  min-width: 100%;
+  height: 282px;
+  width: 282px;
   object-fit: cover;
+  cursor: pointer;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
