--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -3,7 +3,8 @@
   min-height: 19px;
   border: none;
   box-sizing: border-box;
-  background: url("../../../images/like.svg");
+  background-image: url('../../../images/like.svg');
+  background-color: #fff;
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
