--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,13 +1,12 @@
 .element {
   min-height: 361px;
-  /* display: flex;
-  flex-direction: column; */
   overflow: hidden;
   background-color: #fff;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   gap: 25px;
+  position: relative;
 }
 
 @media screen and (max-width: 320px) {
