--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,13 +4,14 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  /* width: 430px;
-  height: 330px; */
   z-index: 2;
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
   box-sizing: border-box;
   padding: 0 19px;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s ease;
 }
