--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,7 +1,9 @@
 .profile__title {
+  grid-area: name;
   display: flex;
   gap: 18px;
-  margin: 0 auto;
+  justify-content: flex-start;
+  /* margin: 0 auto; */
 }
 
 @media screen and (max-width: 440px) {
