--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -6,3 +6,15 @@
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
+
+@media screen and (max-width: 768px) {
+  .element__image {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .element__image {
+    width: 282px;
+  }
+}
