--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,6 +1,5 @@
 .profile__info {
   min-width: 336px;
-  /* min-height: 90px; */
   color: #fff;
   display: grid;
   grid-template-rows: repeat(2, max-content);
@@ -9,7 +8,12 @@
     'profession';
   row-gap: 16px;
   column-gap: 18px;
-  /* position: relative; */
+}
+
+@media screen and (max-width: 768px) {
+  .profile__info {
+    justify-content: center;
+  }
 }
 
 @media screen and (max-width: 440px) {
