--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -4,19 +4,20 @@
   max-width: 880px;
   display: grid;
   grid-template-columns: repeat(3, minmax(auto, 1fr));
+  justify-items: center;
   column-gap: 17px;
   row-gap: 20px;
   padding-top: 47.25px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 930px) {
   .elements {
     grid-template-columns: repeat(2, minmax(auto, 1fr));
     padding-top: 36px;
   }
 }
 
-@media screen and (max-width: 525px) {
+@media screen and (max-width: 620px) {
   .elements {
     grid-template-columns: repeat(1, minmax(auto, 1fr));
   }
