--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -2,17 +2,12 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
   z-index: 2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
   box-sizing: border-box;
   padding: 0 19px;
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0s, opacity 0.5s ease;
+  transition: all 0.5s ease;
   cursor: pointer;
 }
