--- a/pages/index.css
+++ b/pages/index.css
@@ -18,6 +18,8 @@
 @import url('../blocks/profile/__name/profile__name.css');
 @import url('../blocks/profile/__profession/profile__profession.css');
 @import url('../blocks/profile/__avatar/profile__avatar.css');
+@import url('../blocks/profile/__avatar-overlay/profile__avatar-overlay.css');
+@import url('../blocks/profile/__avatar-container/profile__avatar-container.css');
 @import url('../blocks/profile/__info/profile__info.css');
 @import url('../blocks/profile/__add-btn/profile__add-btn.css');
 @import url('../blocks/profile/__edit-btn/profile__edit-btn.css');
@@ -30,6 +32,8 @@
 @import url('../blocks/element/__image/element__image.css');
 @import url('../blocks/element/__base/element__base.css');
 @import url('../blocks/element/__like/element__like.css');
+@import url('../blocks/element/__like-amount/element__like-amount.css');
+@import url('../blocks/element/__like-container/element__like-container.css');
 @import url('../blocks/element/__like_active/element__like_active.css');
 @import url('../blocks/element/__title/element__title.css');
 @import url('../blocks/element/__trash/element__trash.css');
