--- a/main.css
+++ b/main.css
@@ -10,6 +10,8 @@
 .profile__name{font-family:Inter,Arial,sans-serif;font-size:42px;font-style:normal;font-weight:500;grid-area:name;line-height:48px;margin:0;max-width:380px;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:768px){.profile__name{justify-self:center}}@media screen and (max-width:440px){.profile__name{font-size:27px;line-height:33px;max-width:250px}}
 .profile__profession{font-family:Inter,Arial,sans-serif;font-size:18px;font-style:normal;font-weight:400;grid-area:profession;line-height:22px;margin:0;max-width:350px;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:768px){.profile__profession{justify-self:center}}@media screen and (max-width:440px){.profile__profession{font-size:14px;line-height:17px;max-width:250px}}
 .profile__avatar{border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;width:120px}
+.profile__avatar-overlay{align-items:center;background-color:rgba(0,0,0,.6);background-image:url(./images/Edit.bbf66eb7b81dccb49b10.png);background-position:50%;background-repeat:no-repeat;color:#fff;display:flex;flex-direction:column;height:100%;justify-self:center;left:0;opacity:0;position:absolute;top:0;width:100%}.profile__avatar-overlay:hover{cursor:pointer;opacity:1;transition:all .2s ease}
+.profile__avatar-container{position:relative}
 .profile__info{color:#fff;-moz-column-gap:18px;column-gap:18px;display:grid;grid-template-areas:"name" "profession";grid-template-rows:repeat(2,-webkit-max-content);grid-template-rows:repeat(2,max-content);min-width:336px;row-gap:16px}@media screen and (max-width:768px){.profile__info{justify-content:center}}@media screen and (max-width:440px){.profile__info{min-width:250px;row-gap:14px}}
 .profile__add-btn{background:url(./images/add_button.bed8c136e13907f5eefb.svg);background-position:50%;background-repeat:no-repeat;background-size:22px 22px;border:2px solid #fff;border-radius:2px;cursor:pointer;min-height:50px;width:150px}.profile__add-btn:hover{opacity:.6}@media screen and (max-width:768px){.profile__add-btn{background-position:50%;width:100%}}@media screen and (max-width:440px){.profile__add-btn{background-size:16px 16px}}
 .profile__edit-btn{align-self:center;background:url(./images/vector.6c7bf05444b9793fdf6e.svg);background-position:50%;background-repeat:no-repeat;background-size:10px 10px;border:1px solid #fff;color:transparent;cursor:pointer;grid-area:edit;height:24px;width:24px}.profile__edit-btn:hover{opacity:.6}@media screen and (max-width:440px){.profile__edit-btn{background-size:7.5px 7.5px;height:18px;width:18px}}
@@ -18,6 +20,8 @@
 .element__image{border-top-left-radius:10px;border-top-right-radius:10px;cursor:pointer;height:282px;-o-object-fit:cover;object-fit:cover;width:282px}@media screen and (max-width:768px){.element__image{width:100%}}@media screen and (max-width:320px){.element__image{width:282px}}
 .element__base{display:flex;justify-content:space-between;margin-bottom:26px;margin-left:21px;margin-right:15px}
 .element__like{background-color:#fff;background-image:url(./images/like.1ad06e85f169668a1f36.svg);background-position:50%;background-repeat:no-repeat;background-size:contain;border:none;box-sizing:border-box;min-height:19px;min-width:22px;padding:0}.element__like:hover{cursor:pointer;opacity:.5}
+.element__like-amount{font-family:Inter,Arial,sans-serif;font-size:13px;font-style:normal;font-weight:400;line-height:16px;margin:0;padding:0;text-align:center}
+.element__like-container{display:flex;flex-direction:column;gap:3px}
 .element__like_active{background-image:url(./images/like_pressed.35948469632d0421d697.svg)}
 .element__title{font-family:Inter,Arial,sans-serif;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .element__trash{background-image:url(./images/Trash.ce3b64935accf9b8212e.svg);cursor:pointer;height:19px;position:absolute;right:20px;top:20px;width:18px}.element__trash:hover{opacity:.8;transition:all .2s ease-in}
@@ -25,7 +29,7 @@
 .footer__text{font-family:Inter,Arial,sans-serif;font-size:18px;font-style:normal;font-weight:400;justify-self:flex-start;line-height:22px;margin:0}@media screen and (max-width:440px){.footer__text{font-size:14px;line-height:17px}}
 .popup{background-color:rgba(0,0,0,.5);box-sizing:border-box;cursor:pointer;left:0;opacity:0;padding:0 19px;position:fixed;top:0;transition:all .5s ease;visibility:hidden;z-index:2}
 .popup__body{align-items:center;display:flex;height:100vh;justify-content:center;width:100vw}
-.popup__content{background-color:#fff;border-radius:10px;box-sizing:border-box;color:#000;cursor:default;min-height:330px;padding:34px 36px;position:relative;width:430px}@media screen and (max-width:440px){.popup__content{padding:25px 22px;width:100%}}
+.popup__content{background-color:#fff;border-radius:10px;box-sizing:border-box;color:#000;cursor:default;padding:34px 36px;position:relative;width:430px}@media screen and (max-width:440px){.popup__content{padding:25px 22px;width:100%}}
 .popup__content-image{align-items:center;box-sizing:border-box;display:flex;flex-direction:column;gap:10px;justify-content:center;max-height:75vh;max-width:75vw;position:relative}
 
 
@@ -34,7 +38,7 @@
 .popup__close-btn{background:url(./images/Close_Icon.039f1f5203f653b4bacd.svg);background-position:50%;background-repeat:no-repeat;border:none;cursor:pointer;height:32px;position:absolute;right:-40px;top:-42px;width:32px}.popup__close-btn:hover{opacity:.6}@media screen and (max-width:590px){.popup__close-btn{background-size:20px 20px;right:0}}
 .popup__save-btn{align-self:center;background-color:#000;border:0;border-radius:2px;color:#fff;cursor:pointer;font-family:Inter,Arial,sans-serif;font-size:18px;font-style:normal;font-weight:400;line-height:22px;margin-top:10px;min-height:50px;width:100%}.popup__save-btn:hover{opacity:.8}@media screen and (max-width:440px){.popup__save-btn{font-size:14px;line-height:17px}}
 .popup__btn-disabled{background-color:#fff;border:1px solid #c4c4c4;border-radius:2px;color:#c4c4c4;cursor:default}
-.popup__title{font-family:Inter,Arial,sans-serif;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:0 0 54px}@media screen and (max-width:440px){.popup__title{font-size:18px;line-height:22px;margin-bottom:75px}}
+.popup__title{font-family:Inter,Arial,sans-serif;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:0 0 38px}@media screen and (max-width:440px){.popup__title{font-size:18px;line-height:22px;margin-bottom:75px}}
 .popup__text{align-self:flex-start;color:#fff;font-family:Inter;font-size:12px;font-style:normal;font-weight:400;line-height:15px;margin:0;padding:0}
 .popup__inputs{display:flex;flex-direction:column;gap:30px}
 .popup__input{border:none;border-bottom:1px solid rgba(0,0,0,.2);font-family:Inter,Arial,sans-serif;font-size:14px;font-style:normal;font-weight:400;line-height:17px;padding-bottom:10px;width:100%}
